# kymflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  Dockerfile  README.md  docker-compose.yml  fly.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  readme-dev.md
.cursor/: AGENTS.md  defensive-style.mdc  make-contrast-widget.md
.cursor/rules/: gui_v2-architecture.mdc  style.mdc
.github/workflows/: docs.yml  release.yml  test.yml
DEPLOYMENT/: index.html
about/: index.html
algorithms/: index.html
api/kym_file/: index.html
api/kym_flow_radon_gpt/: index.html
api/repository/: index.html
api/state/: index.html
contributing/: index.html
cudmore_zarr/: cudmore_simple.py
declan-analysis/: build_radon_db.py  cudmore_stall_report.py  declan_analysis_2026.py  declan_randomize.py  declan_report.py  test_radon_report.py
declan-getting-started/: index.html
docs/: DEPLOYMENT.md  about.md  algorithms.md  contributing.md  declan-getting-started.md  download.md  file-formats.md  index.md  plan_roi_callbacks_file_table.md  removal_report_remove_outliers_median_filter.md
docs/api/: kym_file.md  kym_flow_radon.md  kym_flow_radon_gpt.md  metadata.md  repository.md  state.md
download/: index.html
file-formats/: index.html
notebooks/: KymFlow Quick Start.ipynb  danger_delete_kym_analysis.py  declan_analysis_2026.py  display_one_kym.py  quality_control.ipynb  run_kym_image_list.py
prompts/: fix-async-bus.md  how-to-add-experimental-metadata.md  how-to-add-logging.md  how-to-add-to-radon-report.md  how-to-large-file-storage.md  how-to-large-file-storage_updated.md  how-to-logging-improvements.md  how-to-pytest-on-git-push-draft.md  how-to-pytest-on-git-push.md  three_entity_workflow_overview.md  todo-critique- update-nicewidgets-in-kymflow.md  todo-expand-kymanalysis-to-require-channel.md  todo-expand-kymflow-to-multiple-channels.md  todo-fix-file-load-exceptions.md  todo-make-bus-threaded.md  todo-prompt-for-swap-kymflow-to-nicewidgets.md  todo-switch-kymflow-to-nicewidgets-image-line-widget.md
sandbox/: demo_entry_options.py  demo_win_size_app_v3.py  plotly_selected_nicegui.py  test_logging.py
scripts/: generate_docs.py  git-large-file-check.sh
search/: search_index.json
src/kymflow/core/zarr/: README.md  kym_dataset.py  pyproject.toml
src/kymflow/core/zarr/docs/: README.md  api.md  incremental.md  layout.md  workflows.md
src/kymflow/core/zarr/examples/: demo_api_tour_v01.py  demo_export_import_v01.py  demo_gui_flow_v01.py  demo_kym_dataset_v01.py  demo_kymdataset_radon_roi_staleness_v01.py  demo_kymdataset_velocity_events_empty_v01.py  demo_kymdataset_velocity_events_v01.py  demo_nicegui_viewer_v01.py  demo_pipeline_cli_v01.py  ingest_example.py
src/kymflow/core/zarr/indexers/: __init__.py  base.py  radon_report.py  velocity_events.py
src/kymflow/core/zarr/prompts/: README.md  codex_handoff_tickets_3_6_change_report.md  codex_implement_ticket_and_gen_report_prompt.md  codex_run_ticket.md  codex_ticket_07_10.md  codex_ticket_07_10_change_report.md  codex_ticket_11_13.md  codex_ticket_11_13_change_report.md  codex_ticket_14_17.md  codex_ticket_18_21.md  codex_ticket_18_21_change_report.md  codex_ticket_26_29.md  codex_ticket_26_29_change_report.md  codex_ticket_30_32_change_report.md  codex_ticket_36_38.md  codex_ticket_36_38_change_report.md  codex_tickets_1_2.md
src/kymflow/core/zarr/prompts/handoffs/: codex_handoff_kymdataset_indexers_v01.md  codex_handoff_kymdataset_indexers_v01_change_report.md  codex_handoff_tickets_3_6.md  codex_handoff_tickets_3_6_change_report.md
src/kymflow/core/zarr/prompts/runners/: codex_change_report_prompt.md  codex_implement_ticket_and_gen_report_prompt.md  codex_run_ticket.md
src/kymflow/core/zarr/prompts/tickets/: codex_ticket_14_17_change_report.md  codex_ticket_22_25.md  codex_ticket_22_25_change_report.md  codex_ticket_30_32.md  codex_ticket_33_35.md  codex_ticket_33_35_change_report.md  codex_ticket_36_38.md  codex_ticket_36_38_change_report.md  codex_ticket_39_40.md  codex_ticket_39_40_change_report.md  codex_ticket_41_42_repo_split_plan_acqstore.md  codex_ticket_43_44_repo_split_execute_acqstore.md  codex_ticket_template.md
src/kymflow/core/zarr/src/kymflow_zarr/: __init__.py  dataset.py  io_export.py  io_import.py  manifest.py  record.py  schema.py  utils.py
src/kymflow/core/zarr/src/kymflow_zarr/experimental_stores/: __init__.py  acq_image.py  acq_image_list.py
src/kymflow/core/zarr/src/kymflow_zarr/experimental_stores/stores/: __init__.py  base.py  factory.py  sidecar.py  tiff_store.py  zarr_store.py
src/kymflow/core/zarr/tests/: conftest.py  test_acq_image_compat.py  test_dataset_behaviors.py  test_dataset_tables.py  test_docs_contract_smoke.py  test_import_export_v01.py  test_kym_dataset_indexers.py  test_manifest_ordering.py  test_manifest_resilience.py  test_metadata_roundtrip.py  test_record_api.py  test_roi_schema_and_pixels_v01.py  test_sources_refresh.py  test_zarr_store_artifacts.py
tests/: conftest.py  test_kym_file.py  test_kym_file_simple.py  test_metadata.py  test_olympus_header.py  test_repository.py
(+860 files in other folders)
