[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kymflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "psygnal>=0.14.2",
    "tifffile>=2024.5.24",
    "scikit-image>=0.24.0",
    "plotly>=6.5.0",
    "matplotlib>=3.9.4",
]

[project.optional-dependencies]  # pip/venv/conda extras
gui = [
    "nicegui>=3.3.1",
    "pywebview[gui]>=6.1",
]
test = ["pytest>=7.4"]
notebook = ["jupyterlab>=4.3.0"]
pyinstaller = [
    "pyinstaller>=6.17.0",
]

[dependency-groups]  # uv dependency groups (kept in sync with extras)
gui = [
    "nicegui>=3.3.1",
    "pywebview[gui]>=6.1",
]
test = ["pytest>=7.4"]
notebook = ["jupyterlab>=4.3.0"]
pyinstaller = [
    "pyinstaller>=6.17.0",
]

[project.scripts]
kymflow-gui = "kymflow_gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kymflow_core", "src/kymflow_gui"]
