[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kymflow"
version = "0.1.0"
description = "Linescan kymograph blood flow analysis."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "psygnal>=0.14.2",
    "tifffile>=2024.5.24",
    "scikit-image>=0.24.0",
    "plotly>=6.5.0",
    "matplotlib>=3.9.4",
]

license = { file = "LICENSE" }

authors = [
    { name = "Robert H. Cudmore", email = "robert.cudmore@gmail.com" },
]

keywords = [
    "kymograph",
    "image-analysis",
    "microscopy",
    "laser-scanning-microscopy",
    "blood-flow",
    "in vivo",
    "electrophysiology",
    "nicegui",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]  # pip/venv/conda extras
gui = [
    "nicegui>=3.3.1",
    "pywebview[gui]>=6.1",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1.0",
]
notebook = ["jupyterlab>=4.3.0"]
pyinstaller = [
    "pyinstaller>=6.17.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-jupyter>=0.24.0",
    "pymdown-extensions>=10.0",
]
dev = [
  "pre-commit",
  "black",
  "ruff",
]

[dependency-groups]  # uv dependency groups (kept in sync with extras)
gui = [
    "nicegui>=3.3.1",
    "pywebview[gui]>=6.1",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1.0",
]
notebook = ["jupyterlab>=4.3.0"]
pyinstaller = [
    "pyinstaller>=6.17.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-jupyter>=0.24.0",
    "pymdown-extensions>=10.0",
]
dev = [
  "pre-commit",
  "black",
  "ruff",
]

# [project.scripts]
# kymflow-gui = "kymflow_gui.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "requires_data: mark test as requiring test data directory (deselect with '-m \"not requires_data\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kymflow_core", "src/kymflow_gui"]

[project.urls]
Homepage = "https://github.com/mapmanager/kymflow"
Repository = "https://github.com/mapmanager/kymflow"
Issues = "https://github.com/mapmanager/kymflow/issues"
Documentation = "https://github.com/mapmanager/kymflow#readme"
